edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents card identification data.
//
// Corresponds to the `CardIdentification` data type, which is part of EF_Identification.
// See Data Dictionary, Section 2.24.
message CardIdentification {
  // See Data Dictionary, Section 2.24, `cardIssuingMemberState`.
  string card_issuing_member_state = 1;

  // See Data Dictionary, Section 2.24, `cardNumber`.
  string card_number = 2;

  // See Data Dictionary, Section 2.24, `cardIssuingAuthorityName`.
  string card_issuing_authority_name = 3;

  // See Data Dictionary, Section 2.24, `cardIssueDate`.
  google.protobuf.Timestamp card_issue_date = 4;

  // See Data Dictionary, Section 2.24, `cardValidityBegin`.
  google.protobuf.Timestamp card_validity_begin = 5;

  // See Data Dictionary, Section 2.24, `cardExpiryDate`.
  google.protobuf.Timestamp card_expiry_date = 6;
}
