edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "wayplatform/connect/tachograph/dd/v1/string_value.proto";

// Represents the `ownerIdentification` sequence from the `CardNumber` CHOICE.
//
// See Data Dictionary, Section 2.26, `CardNumber`.
//
// ASN.1 Definition:
//
//     ownerIdentification SEQUENCE {
//         ownerIdentificationNumber IA5String(SIZE(13)),
//         cardConsecutiveIndex CardConsecutiveIndex,
//         cardReplacementIndex CardReplacementIndex,
//         cardRenewalIndex CardRenewalIndex
//     }
message OwnerIdentification {
  // The unique identification for the owner.
  //
  // ASN.1 Definition:
  //
  //     ownerIdentificationNumber IA5String(SIZE(13))
  StringValue identification_number = 1;

  // A single-digit index for the card.
  //
  // See Data Dictionary, Section 2.14.
  //
  // ASN.1 Definition:
  //
  //     CardConsecutiveIndex ::= IA5String (SIZE(1))
  StringValue consecutive_index = 2;

  // A single-digit index for card replacement.
  //
  // See Data Dictionary, Section 2.31.
  //
  // ASN.1 Definition:
  //
  //     CardReplacementIndex ::= IA5String(SIZE(1))
  StringValue replacement_index = 3;

  // A single-digit index for card renewal.
  //
  // See Data Dictionary, Section 2.30.
  //
  // ASN.1 Definition:
  //
  //     CardRenewalIndex ::= IA5String(SIZE(1))
  StringValue renewal_index = 4;
}
